# quadrupedal_tests

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: quadrupedal_control.yaml  quadrupedal_control_dynamic_pid.yaml  simple_arm_control.yaml
launch/: display_complete.launch  display_controller_test.launch  display_controller_test_dynamic_pid.launch  display_rviz.launch  gazebo.launch  my_world.launch  simple_arm_simulation.launch
rviz/: urdf.rviz
src/: PIDoptimization.cpp  RobotLeg.cpp  basic_movements.cpp  controllerTesting.cpp  controllerTestingModel1.cpp  controllerTestingModel2.cpp  legsFrequency.cpp  quadrupedal_control_rviz.cpp  set_transforms.cpp  test_node.cpp
urdf/: cargo.urdf  model.urdf  model.xml  model1.urdf  model2.urdf  model2_pid_tunning.urdf  model_backup.urdf  simple_arm.urdf
world/: empty_world.world
