<?xml version="1.0"?>
<package format="2">
  <name>quadrupedal_tests</name>
  <version>0.0.0</version>
  <description>The quadrupedal_tests package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fred@todo.todo">fred</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


<depend>roscpp</depend> 
<depend>std_msgs</depend>
<depend>geometry_msgs</depend>
<depend>tf</depend>
<depend>kdl_parser</depend>
<depend>trac_ik_lib</depend>
<depend>gazebo_ros</depend>
<depend>sensor_msgs</depend>
<depend>cv_bridge</depend>
<depend>dynamic_reconfigure</depend>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models" />

  </export>
</package>
